# zbin

./: Cargo.toml
src/: main.rs
static/: styles.css
