[package]
name = "zbin"
version = "0.1.0"
edition = "2021"

[dependencies]
maud = { version = "0.25.0", features = ["axum"] }
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
indexmap = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4.0"
chrono = "0.4.24"
tower-http = { version = "0.4.0", features = ["fs"] }
